# Obd_center

./: .env  .env.dist  manage.py  pyproject.toml  req.txt  sqlite3
Core/: admin.py  apps.py  models.py  urls.py  views.py
Obd_center/: asgi.py  settings.py  urls.py  wsgi.py
Test/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
category/: admin.py  models.py
common/: constants.py
static/: data.json
static/json/: test.json
static/my/: 10.json
static/my/css/: quest.css  style.css
static/my/js/: lang.js  query-test.js  quest-test.js  utils.js
templates/Core/: index.html
