[tool.poetry]
name = "obd-center"
version = "0.1.0"
description = ""
authors = ["Nursultan301 <abykeevnursultan14@gmail.com>"]
readme = "README.md"
packages = [{include = "obd_center"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
django-ckeditor = "6.2.0"
django-debug-toolbar = "3.2.4"
pillow = "9.0.1"
python-dotenv = "0.20.0"
psycopg2-binary = "2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
